STM32_Workspace/.metadata/.plugins/org.eclipse.cdt.ui/HCSR04_Test.build.log
04:36:58 **** Incremental Build of configuration Debug for project HCSR04_Test ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:123:11: error: 'time_diff' undeclared (first use in this function)
  123 |           time_diff = 0;
      |           ^~~~~~~~~
../Core/Src/main.c:123:11: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:124:11: error: 'distance' undeclared (first use in this function)
  124 |           distance = 0;
      |           ^~~~~~~~
../Core/Src/main.c:131:11: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
  131 |           sprintf((char*)txd_message_buffer, "PULSE WIDTH is: %d \r\n", time_diff);
      |           ^~~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'sprintf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:131:11: warning: incompatible implicit declaration of built-in function 'sprintf' [-Wbuiltin-declaration-mismatch]
  131 |           sprintf((char*)txd_message_buffer, "PULSE WIDTH is: %d \r\n", time_diff);
      |           ^~~~~~~
../Core/Src/main.c:131:11: note: include '<stdio.h>' or provide a declaration of 'sprintf'
../Core/Src/main.c:131:26: error: 'txd_message_buffer' undeclared (first use in this function)
  131 |           sprintf((char*)txd_message_buffer, "PULSE WIDTH is: %d \r\n", time_diff);
      |                          ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:132:58: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  132 |           HAL_UART_Transmit(&huart6, txd_message_buffer, strlen((char*)txd_message_buffer), 1000);
      |                                                          ^~~~~~
../Core/Src/main.c:21:1: note: include '<string.h>' or provide a declaration of 'strlen'
   20 | #include "main.h"
  +++ |+#include <string.h>
   21 | 
../Core/Src/main.c:132:58: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
  132 |           HAL_UART_Transmit(&huart6, txd_message_buffer, strlen((char*)txd_message_buffer), 1000);
      |                                                          ^~~~~~
../Core/Src/main.c:132:58: note: include '<string.h>' or provide a declaration of 'strlen'
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

04:36:59 Build Failed. 4 errors, 4 warnings. (took 922ms)

